@@ -45,8 +45,8 @@ and optionally Lingo3G).
     -------------------------------------------------------------
     | Clustering Plugin | Elasticsearch     | Carrot2 | Lingo3G |
     -------------------------------------------------------------
-    | master            | 0.90.2 -> master? | 3.8.0   |  1.8.0  |
-    | 1.1.0             | 0.90.2 -> master? | 3.8.0   |  1.8.0  |
+    | master            | 0.90.4 -> master? | 3.8.0   |  1.8.0  |
+    | 1.1.0             | 0.90.2 -> 0.90.3  | 3.8.0   |  1.8.0  |
     | 1.0.1             | 0.90   -> master  | 3.7.1   |  1.7.1  |
     | 1.0.0             | 0.90   -> master  | 3.7.1   |  1.7.1  |
     -------------------------------------------------------------
