@@ -9,6 +9,8 @@ Bug Fixes
 
 Other
 
+* Minor touches for incompatible ES API changes (removed methods in RestActions).
+
 ================ ElasticSearch-Carrot2 1.1.0 ================
 
 New features
